[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="AudioSection" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AudioTitleLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection"]
layout_mode = 2
text = "Audio"

[node name="MasterVolumeHBox" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MasterLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/MasterVolumeHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume:"

[node name="MasterSlider" type="HSlider" parent="BackgroundPanel/VBoxContainer/AudioSection/MasterVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="MasterValueLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/MasterVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="SFXVolumeHBox" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFXLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/SFXVolumeHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="SFXSlider" type="HSlider" parent="BackgroundPanel/VBoxContainer/AudioSection/SFXVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="SFXValueLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/SFXVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeHBox" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/MusicVolumeHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="BackgroundPanel/VBoxContainer/AudioSection/MusicVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="MusicValueLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AudioSection/MusicVolumeHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="Separator1" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="AccessibilitySection" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AccessibilityTitleLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AccessibilitySection"]
layout_mode = 2
text = "Accessibility"

[node name="ReducedMotionHBox" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/AccessibilitySection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ReducedMotionLabel" type="Label" parent="BackgroundPanel/VBoxContainer/AccessibilitySection/ReducedMotionHBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Reduced Motion:"

[node name="ReducedMotionCheckBox" type="CheckBox" parent="BackgroundPanel/VBoxContainer/AccessibilitySection/ReducedMotionHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Disable idle animations"

[node name="Spacer" type="Control" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsHBox" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResetButton" type="Button" parent="BackgroundPanel/VBoxContainer/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Reset to Defaults"

[node name="BackButton" type="Button" parent="BackgroundPanel/VBoxContainer/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"
